Added flag that enables aggressive optimizations.